tests/ui/errors/error-count.stderr
error[E0425]: cannot find value `a` in this scope
  --> $DIR/issue-33525.rs:2:5
   |
LL |     a;
   |     ^ not found in this scope

error[E0609]: no field `lorem` on type `&'static str`
  --> $DIR/issue-33525.rs:3:8
   |
LL |     "".lorem;
   |        ^^^^^ unknown field

error[E0609]: no field `ipsum` on type `&'static str`
  --> $DIR/issue-33525.rs:4:8
   |
LL |     "".ipsum;
   |        ^^^^^ unknown field

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0425, E0609.
For more information about an error, try `rustc --explain E0425`.
